[package]
name = "bloom-filter-benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.10.0"

ahash = "0.8.6"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

bloom = "0.3.2"
bloomfilter = "1.0.13"
probabilistic-collections = "0.7.0"
fastbloom-rs = "0.5.9"
sbbf-rs-safe = "0.3.2"

fastbloom = { path = "../fastbloom" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench_bloom_filter"
harness = false
